# cvutil

./: .gitignore  CMakeLists.txt  README.md
buildold/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  cmake_install.cmake  opencv.sln  opencv.vcxproj  opencv.vcxproj.filters  ui_mainwindow.h
buildold/src/: moc_Source1.cpp_parameters  moc_Worker.cpp  moc_Worker.cpp_parameters  moc_mainwidget.cpp_parameters  moc_mainwindow.cpp  moc_mainwindow.cpp_parameters  moc_utils.cpp_parameters
src/: Source1.cpp  Worker.cpp  Worker.h  mainwidget.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  masterwindow.cpp  masterwindow.h  masterwindow.ui  utils.h
